werk-parser/tests/fail/spawn_in_build_recipe_run_block.txt
error[P2001]: parse error
 --> INPUT:3:9
  |
1 | build "foo" {
  | - while parsing build recipe
2 |     run {
  |     - while parsing run
3 |         spawn "bar"
  |         ^ unexpected spawn statement
  |
  = help: `spawn` is only allowed in `task` recipes
